Resolve overflow bug on mastheads.

--- a/resources/assets/styles/entities/volumes/layout/_volume.scss
+++ b/resources/assets/styles/entities/volumes/layout/_volume.scss
@@ -7,7 +7,7 @@
     height: 600px !important;
     min-height: 500px;
     position: relative;
-    overflow: visible;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
